Fix squashed article thumbnails in listings. Fix #171

--- a/encyctng/static_src/sass/components/_article-listing-item.scss
+++ b/encyctng/static_src/sass/components/_article-listing-item.scss
@@ -32,7 +32,8 @@
         gap: $spacer-small;
     }
 
-    &__image-container {
+    &__image {
+        max-width: initial;
         width: 100px;
         height: 100px;
 
@@ -40,13 +41,6 @@
             width: 170px;
             height: 170px;
         }
-    }
-
-    &__image {
-        object-fit: cover;
-        object-position: center;
-        width: 100%;
-        height: 100%;
     }
 
     &__link {
